--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "aos": "^2.3.4",
     "bootstrap": "^4.4.1",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "lightgallery.js": "^1.1.3",
+    "photoswipe": "^4.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^9.7.4",
